# SDL2-particles

./: .clang-format  .gitignore  CMakeLists.txt  ParticleExample.cpp  ParticleSystem.cpp  ParticleSystem.h  README.md  main.cpp
examples/sdl2/: CMakeLists.txt  DemoApplication.cpp  DemoApplication.h  ParticleObject.cpp  ParticleObject.h  main.cpp
src/: CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.h
